--- a/Assets/stylesheets/styles.css
+++ b/Assets/stylesheets/styles.css
@@ -11,6 +11,7 @@ body{
     width:100%;  /* inherit width from html parent */
 }
 
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -581,7 +582,7 @@ a{                           /* styling for anchor links of footer */
     position:absolute;
     top:352px;
     left:80px;
-    width:100%;
+    width:75%;
     margin:0;
     padding:0;
 }
@@ -634,7 +635,9 @@ a{                           /* styling for anchor links of footer */
     align-items: center;
     justify-items:center;
     justify-content:flex-start;
-    margin: 0 100px 0 100px; 
+    /*margin: 0 100px 0 100px; */
+    padding: 0 40px 0 40px;
+    margin:0;
       
 }
 
